# s4s-minor-cmake-example

./: CMakeLists.txt  Example.cpp  LICENSE  README.md
